Fix Twitter icon to fa-twitter for FA 6.3 compatibility

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -35,7 +35,7 @@ const contactContent: ContactContentType = {
   socialLinks: [
     { icon: 'fab fa-github', href: 'https://github.com/OiPunk' },
     { icon: 'fab fa-linkedin', href: 'https://linkedin.com/in/weiguang-li' },
-    { icon: 'fab fa-x-twitter', href: 'https://x.com/CodingPunkOi' },
+    { icon: 'fab fa-twitter', href: 'https://x.com/CodingPunkOi' },
     { icon: 'fab fa-stack-overflow', href: 'https://stackoverflow.com/users/32329855/punk-oi' },
   ],
 };
