--- a/src/components/AboutPage.astro
+++ b/src/components/AboutPage.astro
@@ -49,7 +49,7 @@ const content: AboutContent = {
   profile: {
     name: "Weiguang Li",
     title: "Java Backend Developer",
-    image: "/img/male2.jpg",
+    image: "/img/profile-avatar.png",
     imageAlt: "Weiguang Li",
     email: "weiguang.li.dev@gmail.com",
     location: "China",
@@ -73,7 +73,7 @@ const content: AboutContent = {
   aboutContent: {
     github: {
         username: "OiPunk",
-        avatar: "/img/male2.jpg",
+        avatar: "/img/profile-avatar.png",
         url: "https://github.com/OiPunk",
     },
     cta: {
